<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/tvAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/author"
                android:textColor="#616161"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/book"
                android:textColor="#616161"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivRowDelete"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:src="@drawable/ic_delete"
                app:tint="#9E9E9E"
                android:contentDescription="@string/icon" />

            <ImageView
                android:id="@+id/ivRowEdit"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:src="@drawable/ic_edit"
                app:tint="#9E9E9E"
                android:contentDescription="@string/icon" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
